# YOUTUBE_DL_JATAPIA

./: .gitignore  LICENSE  Makefile  README.md  env.example  pyproject.toml
examples/: __init__.py  example_usage.py
scripts/: __init__.py  install.py  setup_download_folder.py
src/ytdl_helper/: __init__.py  cli.py  config.py  core.py  tui.py  utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_utils.py
